        - `font` elements are replaced with `span`s.
        - `center` elements are replace by `div`s. See note below about the CSS3 elements needed to reproduce the behavior of the `center` elements.
        - when elements not permitted in as `body` content are present as a child of the `body element, they are wrapped in `div` elements

- Ebookmaker has been somewhat heavy-handed when removing deprecated elements and attributes. With this version of Ebookmaker, we make more of an effort to preserve the formatting of the source document. This will impact EPUB2, EPUB3 and HTML5 produced files.
    - size attributes in `font` tags are translated to css rather than ignored.
    - list styles are translated to css rather than ignored.
    - size and width attributes on `hr` are translated to css rather than ignored.
    - width attributes on `hr` are translated to css rather than ignored.
    - deprecated align attributes on most elements are translated to css rather than ignored.
    - bgcolor attributes on elements other than body are translated to css rather than ignored.
    - values for the attributes align, frame, and rules are changed to lower case

- a customization has been added for the cssutils module to permit us to add selected CSS properties we want to use (the built-in tables are getting old.) We needed to do this because certain conversions for obsolete elements could not be duplicated without using newer CSS properties. In particular:
    - to reproduce the legacy `center` element, we added `display: flex` and `justify-content: center`.
    - `speak` and `speak-as` css properties have been updated.

- for HTML5, a validation hook has been added. As with EPUB validation, add the path of your command-line HTML5 validator to the .ebookmaker config file and set the --validate flag. Tested with the W3C "Nu" validator - https://validator.github.io/validator/
- for HTML5, move col@valign to css